# java_call_cpp

./: Introduction.md  README.md
java_demo/: HelloJNI.java
java_demo/src/: CMakeLists.txt  interface.cpp
java_demo/src/_code/header/: hello.h
java_demo_cuda/: HelloJNI.java  build.sh
java_demo_cuda/src/: CMakeLists.txt  interface.cpp
java_demo_cuda/src/_code/: CMakeLists.txt
scala_demo/: Sample.scala  build.sh
scala_demo/src/: CMakeLists.txt  interface.cpp
scala_demo/src/_code/: CMakeLists.txt
scala_demo/src/_code/file/: hello.cpp
scala_demo_cuda/: Sample.scala
scala_demo_cuda/src/_code/file/: add_cuda.cu
